--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tosspayments/payment-widget-sdk": "^0.12.0",
+    "@tosspayments/tosspayments-sdk": "^2.3.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-cookie": "^8.0.1",
